k8s/apps/jupyter/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: quay.io/jupyter/base-notebook:2025-11-24@sha256:f0c027efd04097b65ad91d67a92d28530ea05999aafc791231e08ea113277e62
          workingDir: /work
          command:
            - jupyter
            - lab
            - --ServerApp.ip="*"
            - --ServerApp.allow_remote_access=True
            - --ServerApp.websocket_url="wss://jupyter.starry.blue"
            - --ServerApp.open_browser=False
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: work
              mountPath: /work
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: work
          hostPath:
            path: /opt/k8s-volumes/jupyter/work
            type: DirectoryOrCreate
      restartPolicy: Always
