k8s/apps/jupyter/resources/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: route

spec:
  routes:
    - kind: Rule
      match: Host(`jupyter.starry.blue`)
      services:
        - name: service
          port: 8888
